src/assets/scss/_home.scss
@import "./variables";


@media (any-hover: hover) {
  .home {

  }
}

.home {
  .banner {
    padding: 17.9% 0;
    p {
      font-size: 1.5rem;
    }
    h1 {
      color:       $white;
      font-weight: 700;
    }
    .overlay {
      background: linear-gradient(-45deg, rgba(0, 0, 0, 0), rgba(33, 33, 54, 0.25), rgba(34, 34, 55, 0.46), #26263E);
    }
    &-inner {
      p {
        max-width:     470px;
        margin-bottom: 3rem;
      }
      span {
        font-size:     2.625rem;
        font-weight:   600;
        margin-bottom: 3rem;
      }
    }
    &-description {
      display:         flex;
      flex-direction:  column;
      align-items:     flex-start;
      justify-content: center;
    }
  }
  .advantages {
    padding: 5.73% 0 10%;
    &-description {
      position: relative;
      z-index:  1;
      h3 {
        margin-bottom: 1.5rem;
      }
      p {
        max-width:   600px;
        line-height: 1.5;
      }
    }
    &-image {
      transform:     translate(0, -17%);
      margin-bottom: 6%;
    }
    &-list {
      display:         flex;
      justify-content: space-between;
      margin-bottom:   13.84%;
      .advantages-item {
        width:           calc(33.3333% - 2.5%);
        max-width:       416px;
        text-align:      center;
        display:         flex;
        flex-direction:  column;
        justify-content: center;
        align-items:     center;
        background:      #F6F6F6;
        box-shadow:      -5px 10px 10px 0 rgba(38, 38, 62, 0.16);
        border-radius:   20px;
        padding:         4% 2.21%;
        .item-image {
          background:      $white;
          padding:         5px;
          border-radius:   5px;
          display:         flex;
          justify-content: center;
          align-items:     center;
          width:           112px;
          height:          112px;
          margin-bottom:   1.875rem;
        }
        h5 {
          margin-bottom: .75rem;
        }
      }
    }
    &-quote {
      position:      relative;
      display:       flex;
      align-items:   center;
      max-width:     950px;
      background:    $secondaryColor;
      border-radius: 30px;
      margin:        0 auto;
      padding:       6.45% 2%;
      .quote-image {
        position:  absolute;
        bottom:    0;
        left:      0;
        transform: translate(-18%, 0);
        width:     72.11%;
      }
      .quote-description {
        max-width:   450px;
        margin-left: auto;
      }
      p {
        font-size:     1.75rem;
        color:         $white;
        margin-bottom: 1rem;
      }
      span {
        font-size: 1.25rem;
      }
    }
  }
  .information {
    background: $secondaryColor;
    padding:    6% 0;
    &-title {
      text-align: center;
      max-width:  730px;
      margin:     0 auto 3.75rem;
      h2 {
        margin-bottom: 1rem;
      }
      h2, p {
        color: #E9ECF1;
      }
      p {
        max-width:   687px;
        margin:      0 auto;
      }
    }
    &-list {
      display:         flex;
      justify-content: space-between;
    }
    &-item {
      width:          calc(33.3333% - 2.5%);
      max-width:      438px;
      display:        flex;
      flex-direction: column;
      align-items:    center;
      background:     $white;
      border-radius:  20px;
      padding:        3.5%;
      h6 {
        text-align:    center;
        margin-bottom: 12px;
      }
      .item-image {
        width:         121px;
        margin-bottom: 12.4%;
      }
    }
  }
  .purchase {
    text-align: center;
    padding:    9.9% 0 6.7%;
    h2 {
      max-width: 750px;
      margin:    0 auto 5.1%;
    }
    &-list {
      display:         flex;
      justify-content: space-between;
      flex-wrap:       wrap;
      max-width:       1235px;
      margin:          0 auto;
    }
    &-item {
      max-width:     309px;
      width:         calc(33.3333% - 8.3%);
      margin-bottom: 8.7%;
      .item-number {
        margin:          0 auto 15%;
        display:         flex;
        justify-content: center;
        align-items:     center;
        background:      $secondaryColor;
        width:           33%;
        height:          57%;
        border-radius:   20px;
        span {
          color:       $white;
          font-size:   3rem;
          font-weight: 700;
        }
      }
    }
  }
  .apartments {
    h2 {
      max-width: 740px;
      margin:    0 auto 2.4%;
    }
    &-panel {
      margin-bottom: 6%;
    }
    &-inner {
      display:        flex;
      flex-direction: column;
      align-items:    center;
      > .btn {
        padding: 22px 12px;
      }
    }
    &-list {
      display:         flex;
      justify-content: space-between;
      flex-wrap:       wrap;
      margin-bottom:   11.33%;
      width:           100%;
    }
    &-item {
      width: calc(33.3333% - 2.5%);
    }
  }
  .reviews {
    padding: 9.5% 0 12.81%;
    h2 {
      text-align:    center;
      margin-bottom: 5.7%;
    }
    &-slider {
      position: relative;
      .swiper-container {
        padding: 1%;
        margin:  0 5.84%;
        .swiper-wrapper {
        }
        .swiper-slide {
          height: initial;
        }
      }
      .swiper-button-next, .swiper-button-prev {
        color: $secondaryColor;
        &:after {
          font-size: 2.9rem;
        }
      }
    }
    &-item {
      background:    #F0F1F3;
      border-radius: 10px;
      box-shadow:    -5px 10px 10px 0 rgba(38, 38, 62, 0.16);
      padding:       8.3% 9.4%;
      min-height:    100%;
      .item-title {
        display:       flex;
        align-items:   center;
        margin-bottom: 7%;
      }
      .item-image {
        margin-right: 5%;
      }
    }
  }
}

@media screen and (max-width: 991.98px) {

}

@media screen and (max-width: 567px) {

}

